--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Mac Stuff
+.DS_Store
+
+# Eclipse Core      
+.project
+.settings/
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
