--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ hs_err_pid*
 .project
 .settings/
 
+# VS Code settings
+.vscode
+
 # JDT-specific (Eclipse Java Development Tools)     
 .classpath
